# LiberTech-EtherCAT-Master

./: LICENSE  README.md  xenomai and igh setup.txt
ethercat_new/soem_interface/soem_interface_examples/: CMakeLists.txt
ethercat_new/soem_interface/soem_interface_rsl/: CMakeLists.txt
ethercat_new/soem_interface/soem_interface_rsl/include/soem_interface_rsl/: EthercatBusBase.hpp
legged_bridge_hw/: CMakeLists.txt  package.xml
legged_bridge_hw/app/ethercat/: EthercatDeviceConfigurator.cpp  EthercatDeviceConfigurator.hpp
legged_bridge_hw/app/ethercat/config/device_configurations/: elmo_ankle.yaml  elmo_hip_120.yaml  elmo_hip_90.yaml  elmo_knee.yaml
legged_bridge_hw/include/legged_bridge_hw/: BridgeHW.h
legged_bridge_hw/launch/: legged_bridge_hw.launch
legged_bridge_hw/src/: BridgeHW.cpp
reference_documentations/: xenomai and igh setup.txt
